--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,122 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible_research_assignment_1"
+output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Loading and preprocessing the data
-
-
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
+##Loading the packages
+```{R}
+library(ggplot2)
+library(lubridate)
+library(Hmisc)
+```
 
 
+##Loading and preprocessing the data
 
-## Are there differences in activity patterns between weekdays and weekends?
+###1. Load the data(i.e. read.csv())
+
+```{r}
+if (!file.exists("activity.csv")){
+    unzip("repdata%2Fdata%2Factivity.zip")
+}
+activity = read.csv("activity.csv")
+
+```
+
+###2. Process/transform the data(if necessary) into a format suitable for your analysis
+
+```{R}
+activity$date = ymd(activity$date)
+```
+
+
+
+##What is the mean total number of steps taken per day?
+
+###1.Calculate the total number of steps taken per day and plot it in histogram by qplot
+```{R}
+activity$steps_per_day = tapply(activity$steps, activity$date, sum, na.rm=TRUE)
+qplot(activity$steps_per_day, xlab="Steps per day", ylab = "Number")
+```
+
+###2. Calculate and report the mean and median of the total number of steps taken per day
+
+```{R}
+steps_Mean=mean(activity$steps_per_day)
+steps_median=median(activity$steps_per_day)
+steps_Mean
+steps_median
+```
+
+
+
+##What is the average daily activity pattern?
+
+###1. Make a time series plot
+
+```{R}
+average = aggregate(x=list(mean_steps= activity$steps), by = list(interval=activity$interval), FUN=mean, na.rm=TRUE)
+ggplot(data=average, aes(x=interval, y= mean_steps))+ geom_line()+xlab("5 minutes interval")+ylab("average of steps")
+```
+
+###2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{R}
+most = which.max(average$mean_steps)
+time_most_steps = gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", average[most,"interval"])
+time_most_steps
+```
+
+
+
+##Imputing missing values
+###1. Calculate and report the totla number of missing values in the dataset
+```{R}
+num_missing_value =length(which(is.na(activity$steps)))
+num_missing_value
+```
+
+###2. Devise a strategy for filling in all of the missing valuers in the dataset: filling mean to NA.
+
+###3. Create a new dataset that is equal to the original dataset but with the missing data filled in
+```{R}
+new_activity = activity
+new_activity$steps= impute(activity$steps, fun=mean)
+```
+
+###4. Make a histogram of the total number of steps taken each day and claculate and report the mean and median total number of steps taken per day.
+
+```{R}
+new_steps_per_day = tapply(new_activity$steps,new_activity$date, sum )
+qplot(new_steps_per_day, xlab = "Steps per day", ylab = "Number", main = "replace missing values to the mean of the rest")
+new_steps_Mean= mean(new_steps_per_day)
+new_steps_median=median(new_steps_per_day)
+new_steps_Mean
+new_steps_median
+```
+
+##Are there difference in activity patterns between weekdays and weekends?
+
+###1. Create a new factor variable in the data set with two levels
+
+```{R}
+new_activity$date_type = ifelse(as.POSIXlt(new_activity$date)$wday %in% c(0,6), "weekend", "weekday")
+```
+
+###2. Make a penal plot containing a time series plot
+
+```{R}
+new_average = aggregate(steps~interval+date_type, data=new_activity, mean)
+ggplot(new_average, aes(interval, steps)) + geom_line()+facet_grid(date_type~.)+ xlab("5-minute interval") + ylab("average number of steps")
+```
+
+
+
+
+
+
+
